--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sense-hat-led": "^1.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.5"
+    "@types/node": "^20.4.5",
+    "typescript": "^5.1.6"
   }
 }
