--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@dittolive/ditto": "^4.3.0",
+    "dotenv": "^16.3.1",
     "sense-hat-led": "^1.2.0"
   },
   "devDependencies": {
