--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ditto-sp-node",
+  "name": "btle_wifi_proto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@dittolive/ditto": "^4.3.0",
-    "dotenv": "^16.3.1",
+    "nconf": "=0.12.0",
     "pi-sense-hat": "^1.0.14",
     "sense-hat-led": "^1.2.0"
   },
